--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,19 @@
           <downloadJavadocs>true</downloadJavadocs>
         </configuration>
       </plugin>
+      <!--***Plugin per compilar els tests del projecte***-->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.2</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>test-jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </pluginManagement>
   <plugins>
