--- a/pom.xml
+++ b/pom.xml
@@ -45,26 +45,70 @@
       <scope>provided</scope>
     </dependency>
   </dependencies>
-  <!-- XXX LA NOVA VERSIÓ NO TE PARENT	<parent>
-  <groupId>org.fundaciobit.plugins</groupId>
-  <version>1.0.0</version>
-  <artifactId>plugins</artifactId>
-</parent>	-->
-<properties>
-</properties>
-<url>http://maven.apache.org</url>
-<build>
-  <pluginManagement>
+  <properties>
+  </properties>
+  <url>http://maven.apache.org</url>
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <configuration>
+            <source>1.6</source>
+            <target>1.6</target>
+            <encoding>UTF-8</encoding>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jar-plugin</artifactId>
+          <executions>
+            <execution>
+              <phase>package</phase>
+              <goals>
+                <goal>test-jar</goal>
+              </goals>
+              <configuration>
+                <includes>
+                  <include>**/plugins/test/**</include>
+                </includes>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-resources-plugin</artifactId>
+          <configuration>
+            <encoding>UTF-8</encoding>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-idea-plugin</artifactId>
+          <configuration>
+            <jdkName>JDK1.6</jdkName>
+            <downloadSources>true</downloadSources>
+            <downloadJavadocs>true</downloadJavadocs>
+          </configuration>
+        </plugin>
+        <!--***Plugin per compilar els tests del projecte***-->
+        <!--<plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>2.2</version>
+          <executions>
+            <execution>
+              <goals>
+                <goal>test-jar</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>-->
+      </plugins>
+    </pluginManagement>
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
-          <encoding>UTF-8</encoding>
-        </configuration>
-      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
@@ -83,108 +127,59 @@
         </executions>
       </plugin>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-resources-plugin</artifactId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>2.8.1</version>
         <configuration>
-          <encoding>UTF-8</encoding>
+          <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-idea-plugin</artifactId>
+        <groupId>com.github.github</groupId>
+        <artifactId>site-maven-plugin</artifactId>
+        <version>0.12</version>
         <configuration>
-          <jdkName>JDK1.6</jdkName>
-          <downloadSources>true</downloadSources>
-          <downloadJavadocs>true</downloadJavadocs>
+          <!-- git commit message -->
+          <message>Maven artifacts for ${project.version}</message>
+          <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
+          <noJekyll>true</noJekyll>
+          <!-- remote branch name -->
+          <branch>refs/heads/gh-pages</branch>
+          <includes>
+            <include>**/*</include>
+          </includes>
+          <path>maven</path>
+          <!-- github repo name -->
+          <repositoryName>maven</repositoryName>
+          <!-- github username or organization  -->
+          <repositoryOwner>GovernIB</repositoryOwner>
+          <server>github_governib_maven</server>
+          <merge>true</merge>
+          <dryRun>false</dryRun>
         </configuration>
-      </plugin>
-      <!--***Plugin per compilar els tests del projecte***-->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>2.2</version>
         <executions>
           <execution>
             <goals>
-              <goal>test-jar</goal>
+              <goal>site</goal>
             </goals>
+            <phase>deploy</phase>
           </execution>
         </executions>
       </plugin>
     </plugins>
-  </pluginManagement>
-  <plugins>
-    <plugin>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-jar-plugin</artifactId>
-      <executions>
-        <execution>
-          <phase>package</phase>
-          <goals>
-            <goal>test-jar</goal>
-          </goals>
-          <configuration>
-            <includes>
-              <include>**/plugins/test/**</include>
-            </includes>
-          </configuration>
-        </execution>
-      </executions>
-    </plugin>
-    <plugin>
-      <artifactId>maven-deploy-plugin</artifactId>
-      <version>2.8.1</version>
-      <configuration>
-        <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
-      </configuration>
-    </plugin>
-    <plugin>
-      <groupId>com.github.github</groupId>
-      <artifactId>site-maven-plugin</artifactId>
-      <version>0.12</version>
-      <configuration>
-        <!-- git commit message -->
-        <message>Maven artifacts for ${project.version}</message>
-        <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
-        <noJekyll>true</noJekyll>
-        <!-- remote branch name -->
-        <branch>refs/heads/gh-pages</branch>
-        <includes>
-          <include>**/*</include>
-        </includes>
-        <path>maven</path>
-        <!-- github repo name -->
-        <repositoryName>maven</repositoryName>
-        <!-- github username or organization  -->
-        <repositoryOwner>GovernIB</repositoryOwner>
-        <server>github_governib_maven</server>
-        <merge>true</merge>
-        <dryRun>false</dryRun>
-      </configuration>
-      <executions>
-        <execution>
-          <goals>
-            <goal>site</goal>
-          </goals>
-          <phase>deploy</phase>
-        </execution>
-      </executions>
-    </plugin>
-  </plugins>
-</build>
-<distributionManagement>
+  </build>
+  <distributionManagement>
+    <repository>
+      <id>github_governib_maven</id>
+      <name>GitHub GovernIB Maven Repository</name>
+      <url>file://${project.build.directory}/mvn-repo</url>
+    </repository>
+  </distributionManagement>
+  <!--   COM UTILITZAR: AFEGIR AQUEST CODI AL pom.xml    -->
+  <!--        <repositories>
   <repository>
-    <id>github_governib_maven</id>
+    <id>github-governib-maven-repos</id>
     <name>GitHub GovernIB Maven Repository</name>
-    <url>file://${project.build.directory}/mvn-repo</url>
+    <url>http://GovernIB.github.io/maven/maven/</url>
   </repository>
-</distributionManagement>
-<!--   COM UTILITZAR: AFEGIR AQUEST CODI AL pom.xml    -->
-<!--        <repositories>
-<repository>
-  <id>github-governib-maven-repos</id>
-  <name>GitHub GovernIB Maven Repository</name>
-  <url>http://GovernIB.github.io/maven/maven/</url>
-</repository>
 </repositories>  -->
 </project>
